/**
 * Get__ProjectName__sByCursorHandler
 * -----------------------------------------------------------------------------
 * Handler que responde a la query `Get__ProjectName__sByCursorQuery`.
 *
 * üîπ Esta clase forma parte de la **capa de aplicaci√≥n**, implementando el patr√≥n CQRS.
 * üîπ Coordina la paginaci√≥n basada en cursor para el agregado `__ProjectName__Entity`.
 *
 * ‚ú® Responsabilidad:
 *  - Acceder al repositorio de lectura con paginaci√≥n
 *  - Devolver entidades del dominio (`__ProjectName__Entity[]`) junto a metadata de cursor
 *
 * üö´ Este handler NO:
 *  - Mapea las entidades a DTOs/Protobuf
 *  - Maneja la l√≥gica de presentaci√≥n (eso lo hace la infraestructura)
 *
 * üß† Justificaci√≥n arquitect√≥nica:
 *  - Mantiene la l√≥gica de paginaci√≥n desacoplada del transporte
 *  - Cumple con los principios de separaci√≥n de intereses (ISO/IEC 42010)
 *  - Compatible con m√∫ltiples adaptadores (REST, GraphQL, gRPC)
 *
 * üîå Dependencias:
 *  - `Get__ProjectName__sWithCursorPort`: puerto de salida del dominio para operaciones de lectura
 */

import { IQueryHandler, QueryHandler } from '@nestjs/cqrs'
import { Inject } from '@nestjs/common'

import { Get__ProjectName__sByCursorQuery } from './get-__projectName__-by-cursor.query'

import { __ProjectName__Entity } from '@__projectName__/microservice/domain/entities/__projectName__.entity'

import { Get__ProjectName__sWithCursorPort } from '@__projectName__/microservice/application/ports/outbounds/repositories/__projectName__-query-ports'

@QueryHandler(Get__ProjectName__sByCursorQuery)
export class Get__ProjectName__sByCursorHandler
  implements IQueryHandler<Get__ProjectName__sByCursorQuery>
{
  constructor(
    @Inject(Get__ProjectName__sWithCursorPort)
    private readonly get__ProjectName__sWithCursorPort: Get__ProjectName__sWithCursorPort
  ) {}

  /**
   * Ejecuta la query con paginaci√≥n basada en cursor.
   *
   * @param query Query con par√°metros de paginaci√≥n (`afterId`, `limit`)
   * @returns Objeto con:
   *  - `items`: lista de entidades
   *  - `nextCursor`: cursor para la siguiente p√°gina
   *  - `hasMore`: indicador si hay m√°s datos
   */
  async execute(query: Get__ProjectName__sByCursorQuery): Promise<{
    items: __ProjectName__Entity[]
    nextCursor: string | null
    hasMore: boolean
  }> {
    const { afterId, limit } = query.payload

    const result = await this.get__ProjectName__sWithCursorPort.getWithCursor(
      afterId,
      limit
    )

    return {
      items: result.items,
      nextCursor: result.nextCursor,
      hasMore: result.hasMore
    }
  }
}
